parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@class.py-11.snap
---
source: parser/src/parser/parser.rs
description: "class a[*T]: pass"
input_file: parser/test_data/inputs/one_liners/class.py
---
Module {
    node: Node {
        start: 0,
        end: 17,
    },
    body: [
        ClassDef(
            ClassDef {
                node: Node {
                    start: 0,
                    end: 17,
                },
                name: "a",
                bases: [],
                keywords: [],
                body: [
                    Pass(
                        Pass {
                            node: Node {
                                start: 13,
                                end: 17,
                            },
                        },
                    ),
                ],
                decorator_list: [],
                type_params: [
                    TypeVarTuple(
                        TypeVarTuple {
                            node: Node {
                                start: 8,
                                end: 10,
                            },
                            name: "T",
                        },
                    ),
                ],
            },
        ),
    ],
}
