parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@class.py-2.snap
---
source: parser/src/parser/parser.rs
description: "class a():\n    pass"
input_file: parser/test_data/inputs/one_liners/class.py
---
Module {
    node: Node {
        start: 0,
        end: 19,
    },
    body: [
        ClassDef(
            ClassDef {
                node: Node {
                    start: 0,
                    end: 19,
                },
                name: "a",
                bases: [],
                keywords: [],
                body: [
                    Pass(
                        Pass {
                            node: Node {
                                start: 15,
                                end: 19,
                            },
                        },
                    ),
                ],
                decorator_list: [],
                type_params: [],
            },
        ),
    ],
}
